<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">216967635623849</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb216967635623849</string>

    <!-- POPUP TITLE PERM -->
    <string name="popup_title_perm_access">This application need permissions to work correctly.</string>
    <string name="popup_title_permission_files_access">This application needs permissions to access your images</string>

    <!-- TOOLBAR -->
    <string name="hungry">I\'m Hungry!</string>
    <string name="available">Available workmates</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>

    <!-- ERROR TEXT -->
    <string name="http_error_message">HttpException, Error code : %1$i</string>
    <string name="timeout_error_message">Request timeout, please check your internet connection</string>
    <string name="exception_error_message">An error occurred, please check your internet connection</string>
    <string name="generic_error_message">An error occurred, please try again</string>

    <string name="no_restaurant_error_message">No restaurants found, try to change your search radius settings</string>

    <!-- TOOLBAR -->
    <string name="toolbar_search_title">Search restaurants</string>
    <string name="toolbar_search_hint">Search</string>

    <string name="search_too_short">Your query must be 3 character length minimum</string>
    <string name="search_no_result">No restaurant match your query</string>

    <!-- BOTTOM MENU -->
    <string name="bottom_menu_map">Map view</string>
    <string name="bottom_menu_list">List view</string>
    <string name="bottom_menu_mates">Workmates</string>
    <string name="bottom_menu_chat">Chat</string>

    <!-- NAVIGATION DRAWER -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_lunch">YOUR LUNCH</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="drawer_logout">LOGOUT</string>
    <string name="info_no_email_found">Email not found</string>
    <string name="info_no_username_found">Username not found</string>

    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error has occurred</string>

    <string name="drawer_no_restaurant_booked">You don\'t booked any restaurant for today!</string>

    <!-- WORKMATES LIST -->
    <string name="mates_is_eating_at">%1$s is eating at %2$s</string>
    <string name="mates_hasnt_decided">%1$s hasn\'t decided yet</string>

    <!-- RESTAURANT LIST -->
    <string name="restaurant_closed">Closed</string>
    <string name="restaurant_opening_not_know">Opening hours are not known</string>
    <string name="list_unit_distance">%1$sm</string>
    <string name="restaurant_open_until">Open until %1$s</string>
    <string name="restaurant_closing_soon">Closing soon (%1$s)</string>
    <string name="restaurant_mates_number">(%1$d)</string>

    <!-- RESTAURANT DETAIL ACTIVITY-->
    <string name="restaurant_item_call">CALL</string>
    <string name="restaurant_item_like">LIKE</string>
    <string name="restaurant_item_dislike">UNLIKE</string>
    <string name="restaurant_item_website">WEBSITE</string>

    <string name="restaurant_error_retrieving_info">Unable to retrieve some user information</string>

    <string name="restaurant_new_booking">You have booked a new restaurant for today!</string>
    <string name="restaurant_change_booking">You have change your booked restaurant for today!</string>
    <string name="restaurant_cancel_booking">You canceled your reservation for this restaurant!</string>

    <string name="restaurant_like_ok">You liked this restaurant!</string>
    <string name="restaurant_like_ko">Error, please try again later</string>
    <string name="restaurant_dislike_ok">You dislike this restaurant!</string>

    <string name="restaurant_detail_no_website">No website available</string>
    <string name="restaurant_detail_no_phone">No phone number available</string>

    <string name="restaurant_detail_recyclerview">%1$s is joining!</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="settings_zoom_title">Default zoom on map</string>
    <string name="settings_search_radius_title">Restaurants search radius</string>
    <string name="settings_notification_title">Notifications</string>
    <string name="settings_notification_text">Each day you will have a reminder for your restaurant\'s choice, if you have selected one</string>

    <string name="settings_save_error_zoom">Minimum is %1$s, Maximum is %2$s</string>
    <string name="settings_save_error_radius">Minimum is %1$s, Maximum is %2$s</string>

    <string name="settings_save_text">Save</string>
    <string name="settings_save_ok">Settings saved!</string>

    <!-- NOTIFICATIONS -->
    <string name="notification_title" translatable="false">Go4Lunch</string>
    <string name="notification_message">Here is a reminder of your choice for today</string>
    <string name="notification_message_big">Here is a reminder of your choice for today : %1$s %2$s. Workmates participating : %3$s</string>
    <string name="notification_message_no_workmates">None</string>

    <!-- WEBVIEW ACTIVITY -->
    <string name="error_display_website">Unable to display website, please try again</string>

    <!-- CHAT ACTIVITY -->
    <string name="chat_input_text_hint">Compose your message</string>
    <string name="chat_send_button">Send</string>
    <string name="chat_no_image_chosen">No image chosen</string>

    <!-- ACTIVITY LABEL -->
    <string name="label_settings">Settings</string>
    <string name="label_website">Website</string>
    <string name="label_chat_detail_activity">Conversation</string>
</resources>
