<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/baseline_map_black_24"
        android:title="@string/bottom_menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/list"
        android:enabled="true"
        android:icon="@drawable/baseline_view_list_black_24"
        android:title="@string/bottom_menu_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mates"
        android:enabled="true"
        android:icon="@drawable/baseline_people_black_24"
        android:title="@string/bottom_menu_mates"
        app:showAsAction="ifRoom" />
</menu>