<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SettingsActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/settings_zoom_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_zoom_title"
        android:layout_marginTop="@dimen/double_margin"
        android:layout_marginStart="@dimen/margin_to_parent"
        android:layout_marginEnd="@dimen/margin_to_parent"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simple_toolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/settings_zoom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/settings_radius_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_to_parent"
        android:hint="@string/settings_search_radius_title"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_zoom_edit_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/settings_radius_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/settings_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="@dimen/margin_to_parent"
        android:switchPadding="@dimen/margin_to_parent"
        android:text="@string/settings_notification_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_radius_edit_layout" />

    <Button
        android:id="@+id/settings_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_to_parent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:text="@string/settings_save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_switch" />

</android.support.constraint.ConstraintLayout>